# oee

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: example_bottling.py  framework.py
examples/: bottling_line.py  vegetable_oil_oee.py
oee/: __init__.py  _result.py  aggregate.py  capacity.py  core.py  pareto.py  plot.py  reliability.py  valuation.py  yields.py
tests/: test_aggregate.py  test_capacity.py  test_core.py  test_from_log.py  test_losses.py  test_ooe.py  test_pareto.py  test_plot.py  test_reliability.py  test_validation_suite.py  test_valuation.py  test_yields.py  validation_cases.json
